--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="./resources/qgis2web.css">
         <style>
         .ol-geocoder.gcd-gl-container {
-            top: 100px!important;
+            top: 65px!important;
             left: .5em!important;
             width: 2.1em!important;
             height: 2.1em!important;
@@ -29,7 +29,7 @@
             height: 2.1875em;
         }
         .ol-touch .ol-geocoder.gcd-gl-container{
-            top: 130px!important;
+            top: 80px!important;
         }
         .ol-geocoder .gcd-gl-btn {
             width: 1.375em!important;
@@ -40,11 +40,11 @@
         </style>
 <style>
 .search-layer {
-  top: 135px;
+  top: 100px;
   left: .5em;
 }
 .ol-touch .search-layer {
-  top: 180px;
+  top: 130px;
 }
 </style>
         <style>
@@ -71,54 +71,13 @@
         }
         </style>
         <link href="resources/ol-geocoder.min.css" rel="stylesheet">
-<style>
-.tooltip {
-  position: relative;
-  background: rgba(0, 0, 0, 0.5);
-  border-radius: 4px;
-  color: white;
-  padding: 4px 8px;
-  opacity: 0.7;
-  white-space: nowrap;
-}
-.tooltip-measure {
-  opacity: 1;
-  font-weight: bold;
-}
-.tooltip-static {
-  background-color: #ffcc33;
-  color: black;
-  border: 1px solid white;
-}
-.tooltip-measure:before,
-.tooltip-static:before {
-  border-top: 6px solid rgba(0, 0, 0, 0.5);
-  border-right: 6px solid transparent;
-  border-left: 6px solid transparent;
-  content: "";
-  position: absolute;
-  bottom: -6px;
-  margin-left: -7px;
-  left: 50%;
-}
-.tooltip-static:before {
-  border-top-color: #ffcc33;
-}
-.measure-control {
-  top: 65px;
-  left: .5em;
-}
-.ol-touch .measure-control {
-  top: 80px;
-}
-</style>
         <style>
         #map {
-            width: 1504px;
+            width: 1634px;
             height: 827px;
         }
         </style>
-        <title>BA85</title>
+        <title>Aide alimentaire BA85</title>
     </head>
     <body>
         <div id="map">
@@ -133,8 +92,8 @@
         <script src="./resources/ol.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
         <script src="resources/ol-geocoder.js"></script>
-        <script src="layers/NombredebnficiairesduRSA2019_1.js"></script>
-        <script src="styles/NombredebnficiairesduRSA2019_1_style.js"></script>
+        <script src="layers/CommunesdeVende_1.js"></script><script src="layers/parEpiceriesdescommunes_2.js"></script><script src="layers/parEpiceriessolidaires_3.js"></script><script src="layers/parHaltesduCoeur_4.js"></script><script src="layers/parCroixRouge_5.js"></script><script src="layers/parStVincentdePaul_6.js"></script><script src="layers/parSecoursPopulaire_7.js"></script><script src="layers/parSecoursCatholique_8.js"></script><script src="layers/parRestosduCoeur_9.js"></script><script src="layers/parBanqueAlimentaire_10.js"></script><script src="layers/BnficiairesBA2021_11.js"></script>
+        <script src="styles/CommunesdeVende_1_style.js"></script><script src="styles/parEpiceriesdescommunes_2_style.js"></script><script src="styles/parEpiceriessolidaires_3_style.js"></script><script src="styles/parHaltesduCoeur_4_style.js"></script><script src="styles/parCroixRouge_5_style.js"></script><script src="styles/parStVincentdePaul_6_style.js"></script><script src="styles/parSecoursPopulaire_7_style.js"></script><script src="styles/parSecoursCatholique_8_style.js"></script><script src="styles/parRestosduCoeur_9_style.js"></script><script src="styles/parBanqueAlimentaire_10_style.js"></script><script src="styles/BnficiairesBA2021_11_style.js"></script>
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
